--- a/app/src/main/res/layout/dialog_chat_full_screen_image.xml
+++ b/app/src/main/res/layout/dialog_chat_full_screen_image.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!--
   ~ Created by Andrii Kovalchuk
-  ~ Copyright (c) 2019. All rights reserved.
-  ~ Last modified 07.12.19 18:32
+  ~ Copyright (c) 2020. All rights reserved.
+  ~ Last modified 26.01.20 17:59
   ~
   ~ This Source Code Form is subject to the terms of the Mozilla Public
   ~ License, v. 2.0. If a copy of the MPL was not distributed with this
@@ -11,7 +11,8 @@
 
 <layout xmlns:tools="http://schemas.android.com/tools"
 	xmlns:app="http://schemas.android.com/apk/res-auto"
-	xmlns:android="http://schemas.android.com/apk/res/android">
+	xmlns:android="http://schemas.android.com/apk/res/android"
+	xmlns:bind="http://schemas.android.com/apk/res-auto">
 
 	<data>
 		<variable
@@ -30,7 +31,7 @@
 				android:layout_height="match_parent"
 				android:adjustViewBounds="true"
 				android:scaleType="fitCenter"
-				app:imageUrl="@{photoUrl}"
+				bind:imageUrl="@{photoUrl}"
 				app:layout_constraintStart_toStartOf="parent"
 				app:layout_constraintEnd_toEndOf="parent"
 				app:layout_constraintTop_toTopOf="parent"
