--- a/app/src/main/res/layout/fragment_cards_item.xml
+++ b/app/src/main/res/layout/fragment_cards_item.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!--
   ~ Created by Andrii Kovalchuk
-  ~ Copyright (c) 2019. All rights reserved.
-  ~ Last modified 19.12.19 21:21
+  ~ Copyright (c) 2020. All rights reserved.
+  ~ Last modified 26.01.20 17:59
   ~
   ~ This Source Code Form is subject to the terms of the Mozilla Public
   ~ License, v. 2.0. If a copy of the MPL was not distributed with this
@@ -11,7 +11,8 @@
 
 <layout
 	xmlns:android="http://schemas.android.com/apk/res/android"
-	xmlns:app="http://schemas.android.com/apk/res-auto">
+	xmlns:app="http://schemas.android.com/apk/res-auto"
+	xmlns:bind="http://schemas.android.com/apk/res-auto">
 
 	<data>
 
@@ -25,8 +26,10 @@
 	<androidx.cardview.widget.CardView
 		android:layout_width="match_parent"
 		android:layout_height="match_parent"
+
 		android:background="?attr/selectableItemBackground"
 		android:foreground="?attr/selectableItemBackground"
+
 		app:cardUseCompatPadding="true"
 		app:cardPreventCornerOverlap="false"
 		app:cardCornerRadius="10dp"
@@ -44,7 +47,7 @@
 				android:contentDescription="@string/description_user_photo"
 				android:scaleType="centerCrop"
 
-				app:imageUrl="@{cardItem.baseUserInfo.mainPhotoUrl}"
+				bind:imageUrl="@{cardItem.baseUserInfo.mainPhotoUrl}"
 
 				app:layout_constraintBottom_toBottomOf="parent"
 				app:layout_constraintEnd_toEndOf="parent"
