--- a/app/src/main/res/layout/fragment_pairs_item.xml
+++ b/app/src/main/res/layout/fragment_pairs_item.xml
@@ -2,7 +2,7 @@
 <!--
   ~ Created by Andrii Kovalchuk
   ~ Copyright (c) 2020. All rights reserved.
-  ~ Last modified 26.01.20 17:59
+  ~ Last modified 26.01.20 19:21
   ~
   ~ This Source Code Form is subject to the terms of the Mozilla Public
   ~ License, v. 2.0. If a copy of the MPL was not distributed with this
@@ -11,8 +11,7 @@
 
 <layout
 	xmlns:android="http://schemas.android.com/apk/res/android"
-	xmlns:app="http://schemas.android.com/apk/res-auto"
-	xmlns:bind="http://schemas.android.com/apk/res-auto">
+	xmlns:app="http://schemas.android.com/apk/res-auto">
 
 	<data>
 
@@ -37,7 +36,10 @@
 			android:background="@color/colorAccentDark"
 			android:contentDescription="@string/description_user_photo"
 			android:scaleType="centerCrop"
-			bind:imageUrl="@{matchedItem.baseUserInfo.mainPhotoUrl}"/>
+
+			app:bindImageUrl="@{matchedItem.baseUserInfo.mainPhotoUrl}"
+			app:progressBar="@{pbImageLoading}"
+			/>
 
 		<ImageView
 			android:id="@+id/pager_container_image_gradient"
@@ -47,6 +49,20 @@
 			android:scaleType="centerCrop"
 			android:src="@drawable/gradient_transparent"
 			android:contentDescription="@string/description_user_photo"
+			/>
+
+		<ProgressBar
+			android:id="@+id/pbImageLoading"
+			android:layout_width="120dp"
+			android:layout_height="120dp"
+			android:layout_gravity="center"
+			android:indeterminate="false"
+			android:minHeight="32dp"
+			android:minWidth="32dp"
+			android:max="100"
+			android:progressDrawable="@drawable/progress_drawable"
+
+			style="@style/Widget.AppCompat.ProgressBar.Horizontal"
 			/>
 
 		<TextView
