--- a/app/src/main/res/layout/fragment_chat_item_left.xml
+++ b/app/src/main/res/layout/fragment_chat_item_left.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!--
   ~ Created by Andrii Kovalchuk
-  ~ Copyright (c) 2019. All rights reserved.
-  ~ Last modified 15.12.19 16:06
+  ~ Copyright (c) 2020. All rights reserved.
+  ~ Last modified 27.01.20 18:28
   ~
   ~ This Source Code Form is subject to the terms of the Mozilla Public
   ~ License, v. 2.0. If a copy of the MPL was not distributed with this
@@ -44,7 +44,7 @@
 			android:layout_margin="10dp"
 			android:background="@color/colorAccentDark"
 			android:contentDescription="@string/chat_message_sender_attach_img_description"
-			android:src="@drawable/default_avatar"
+			android:src="@drawable/placeholder_image"
 			android:visibility="visible"/>
 
 		<TextView
