--- a/app/src/main/res/layout/fragment_profile_places_rv_item.xml
+++ b/app/src/main/res/layout/fragment_profile_places_rv_item.xml
@@ -2,7 +2,7 @@
 <!--
   ~ Created by Andrii Kovalchuk
   ~ Copyright (c) 2020. All rights reserved.
-  ~ Last modified 26.01.20 18:09
+  ~ Last modified 29.01.20 16:42
   ~
   ~ This Source Code Form is subject to the terms of the Mozilla Public
   ~ License, v. 2.0. If a copy of the MPL was not distributed with this
@@ -17,7 +17,7 @@
 
 		<variable
 			name="basePlaceInfo"
-			type="com.mmdev.business.base.BasePlaceInfo" />
+			type="com.mmdev.business.places.BasePlaceInfo" />
 
 	</data>
 
