--- a/app/src/main/res/layout/fragment_chat_item_left.xml
+++ b/app/src/main/res/layout/fragment_chat_item_left.xml
@@ -2,7 +2,7 @@
 <!--
   ~ Created by Andrii Kovalchuk
   ~ Copyright (c) 2020. All rights reserved.
-  ~ Last modified 27.01.20 18:28
+  ~ Last modified 03.02.20 19:01
   ~
   ~ This Source Code Form is subject to the terms of the Mozilla Public
   ~ License, v. 2.0. If a copy of the MPL was not distributed with this
@@ -13,32 +13,23 @@
 	android:layout_width="match_parent"
 	android:layout_height="wrap_content"
 	android:background="@color/colorPrimaryDark"
-	android:paddingTop="10dp"
-	android:paddingBottom="10dp"
-	android:layout_marginEnd="48dp"
+	android:paddingEnd="@dimen/general_margin_8"
+	android:paddingStart="@dimen/general_margin_8"
+	android:paddingBottom="2dp"
+	android:layout_marginEnd="60dp"
+	android:layout_marginBottom="@dimen/general_margin_8"
 	xmlns:android="http://schemas.android.com/apk/res/android">
-
-	<ImageView
-		android:id="@+id/item_message_ivUserPic"
-		android:layout_width="35dp"
-		android:layout_height="35dp"
-		android:layout_alignBottom="@+id/contentMessageChat"
-		android:layout_alignParentStart="true"
-		android:layout_marginStart="5dp"
-		android:layout_marginEnd="5dp"
-		android:contentDescription="@string/chat_message_sender_avatar_img_description"
-		android:src="@drawable/default_avatar"/>
 
 	<LinearLayout
 		android:id="@+id/contentMessageChat"
 		android:layout_width="wrap_content"
 		android:layout_height="wrap_content"
-		android:layout_toEndOf="@id/item_message_ivUserPic"
+		android:layout_alignParentStart="true"
 		android:background="@drawable/fragment_chat_message_left"
 		android:orientation="vertical">
 
 		<ImageView
-			android:id="@+id/img_chat"
+			android:id="@+id/ivChatMessagePhoto"
 			android:layout_width="200dp"
 			android:layout_height="250dp"
 			android:layout_margin="10dp"
@@ -48,9 +39,9 @@
 			android:visibility="visible"/>
 
 		<TextView
+			android:id="@+id/tvChatMessageText"
 			android:layout_width="wrap_content"
 			android:layout_height="wrap_content"
-			android:id="@+id/item_message_tvMessage"
 			android:layout_margin="10dp"
 			android:text="@string/default_message_text"
 			android:textIsSelectable="true"
@@ -60,16 +51,16 @@
 	</LinearLayout>
 
 	<TextView
-		android:id="@+id/item_message_tvTimestamp"
+		android:id="@+id/tvChatMessageTimestamp"
 		android:layout_width="wrap_content"
 		android:layout_height="wrap_content"
-		android:layout_below="@+id/contentMessageChat"
-		android:layout_toEndOf="@id/item_message_ivUserPic"
+		android:layout_below="@id/contentMessageChat"
+		android:layout_alignStart="@id/contentMessageChat"
 		android:layout_marginTop="2dp"
 
 		android:text="@string/default_message_date"
 		android:textColor="@color/white_25"
-		android:textSize="12sp"
+		android:textSize="8sp"
 		style="@style/regular_text_white85op" />
 
 
