--- a/app/src/main/res/layout/fragment_chat_item_left.xml
+++ b/app/src/main/res/layout/fragment_chat_item_left.xml
@@ -2,7 +2,7 @@
 <!--
   ~ Created by Andrii Kovalchuk
   ~ Copyright (c) 2020. All rights reserved.
-  ~ Last modified 03.02.20 19:01
+  ~ Last modified 03.02.20 19:22
   ~
   ~ This Source Code Form is subject to the terms of the Mozilla Public
   ~ License, v. 2.0. If a copy of the MPL was not distributed with this
@@ -17,7 +17,8 @@
 	android:paddingStart="@dimen/general_margin_8"
 	android:paddingBottom="2dp"
 	android:layout_marginEnd="60dp"
-	android:layout_marginBottom="@dimen/general_margin_8"
+	android:layout_marginBottom="4dp"
+	android:layout_marginTop="4dp"
 	xmlns:android="http://schemas.android.com/apk/res/android">
 
 	<LinearLayout
