--- a/app/src/main/res/layout/fragment_chat_item_right.xml
+++ b/app/src/main/res/layout/fragment_chat_item_right.xml
@@ -2,7 +2,7 @@
 <!--
   ~ Created by Andrii Kovalchuk
   ~ Copyright (c) 2020. All rights reserved.
-  ~ Last modified 03.02.20 19:01
+  ~ Last modified 03.02.20 19:22
   ~
   ~ This Source Code Form is subject to the terms of the Mozilla Public
   ~ License, v. 2.0. If a copy of the MPL was not distributed with this
@@ -18,13 +18,15 @@
 	android:paddingBottom="2dp"
 	android:layout_marginStart="60dp"
 	android:layout_marginEnd="@dimen/general_margin_8"
-	android:layout_marginBottom="@dimen/general_margin_8"
+	android:layout_marginBottom="4dp"
+	android:layout_marginTop="4dp"
     xmlns:android="http://schemas.android.com/apk/res/android">
 
 	<LinearLayout
 		android:id="@+id/contentMessageChat"
 		android:layout_width="wrap_content"
 		android:layout_height="wrap_content"
+		android:gravity="end"
 		android:layout_alignParentEnd="true"
 		android:background="@drawable/fragment_chat_message_right"
 		android:orientation="vertical">
@@ -44,6 +46,7 @@
 			android:layout_width="wrap_content"
 			android:layout_height="wrap_content"
 			android:layout_margin="10dp"
+			android:layout_gravity="end"
 			android:text="@string/default_message_text"
 			android:textIsSelectable="true"
 			android:textSize="16sp"
