--- a/app/src/main/res/layout/fragment_pairs_item.xml
+++ b/app/src/main/res/layout/fragment_pairs_item.xml
@@ -2,7 +2,7 @@
 <!--
   ~ Created by Andrii Kovalchuk
   ~ Copyright (c) 2020. All rights reserved.
-  ~ Last modified 05.02.20 15:25
+  ~ Last modified 16.02.20 17:10
   ~
   ~ This Source Code Form is subject to the terms of the Mozilla Public
   ~ License, v. 2.0. If a copy of the MPL was not distributed with this
@@ -17,7 +17,7 @@
 
 		<variable
 			name="matchedItem"
-			type="com.mmdev.business.cards.CardItem" />
+			type="com.mmdev.business.cards.MatchedUserItem" />
 
 	</data>
 
